<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cardItem"
            type="com.jmarkstar.cheqdemoproj.presentation.home.CardItem" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/balanceCardRoot"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_layout_height"
        android:padding="@dimen/app_spacing"
        tools:background="@drawable/bg_all_account_card">

        <!-- Bank Info Section -->

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{!cardItem.isAllAccount}"
            app:constraint_referenced_ids="bankIcon,syncIcon,syncTime" />

        <ImageView
            android:id="@+id/bankIcon"
            android:layout_width="@dimen/card_bank_icon_size"
            android:layout_height="@dimen/card_bank_icon_size"
            tools:src="@drawable/ic_commbank"
            app:srcName="@{cardItem.bankIcon}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/bankName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{cardItem.bankName}"
            android:textAppearance="@style/TextAppearance.Bold"
            android:textColor="@{cardItem.isAllAccount ? @color/card_all_account_color : @color/black}"
            app:layout_constraintStart_toEndOf="@+id/bankIcon"
            app:layout_constraintEnd_toStartOf="@+id/syncIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/glBankInfoSection"
            android:layout_marginStart="@dimen/app_spacing_small"
            app:layout_goneMarginStart="@dimen/app_zero_dp"
            tools:text="@string/card_all_accounts_label" />

        <ImageView
            android:id="@+id/syncIcon"
            android:layout_width="@dimen/card_sync_time_icon_size"
            android:layout_height="@dimen/card_sync_time_icon_size"
            android:src="@drawable/ic_refresh"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/bankIcon"
            app:layout_constraintEnd_toStartOf="@+id/syncTime"
            android:layout_marginEnd="@dimen/app_spacing_tiny"/>

        <TextView
            android:id="@+id/syncTime"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@{cardItem.syncDate}"
            tools:text="@string/card_just_now"
            android:textSize="@dimen/card_sync_time_text_size"
            android:textColor="@color/card_sync_date_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/bankIcon"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glBankInfoSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="@dimen/card_bank_icon_size"
            android:orientation="horizontal"/>

        <!-- Balance Section -->

        <TextView
            android:id="@+id/balance"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@{cardItem.balance}"
            tools:text="$1,005"
            android:textSize="24sp"
            android:textColor="@{cardItem.isAllAccount ? @color/white : @color/black}"
            android:textAppearance="@style/TextAppearance.Bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/glBankInfoSection"
            android:layout_marginTop="@dimen/app_spacing" />

        <TextView
            android:id="@+id/balanceLabel"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textColor="@{cardItem.isAllAccount ? @color/card_all_account_color : @color/black}"
            android:text="@string/card_balance_label"
            android:layout_marginStart="@dimen/app_spacing_small"
            app:layout_constraintTop_toTopOf="@+id/balance"
            app:layout_constraintBottom_toBottomOf="@+id/balance"
            app:layout_constraintStart_toEndOf="@+id/balance"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Graphic Section -->



        <!-- Total Section -->

        <View
            android:id="@+id/expenseDot"
            android:background="@drawable/bg_expense_circle"
            android:layout_width="@dimen/card_dot_size"
            android:layout_height="@dimen/card_dot_size"
            android:layout_marginEnd="@dimen/app_spacing_small"
            app:layout_constraintTop_toTopOf="@+id/totalExpense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/totalExpense"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@{cardItem.spent}"
            android:layout_marginEnd="@dimen/app_spacing_tiny"
            android:textColor="@{cardItem.isAllAccount ? @color/white : @color/black}"
            android:textAppearance="@style/TextAppearance.Bold"
            tools:text="$450"
            android:layout_marginStart="@dimen/app_spacing_small"
            app:layout_constraintStart_toEndOf="@+id/expenseDot"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/expenseLabel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@{cardItem.isAllAccount ? @color/card_all_account_color : @color/black}"
            android:text="@{cardItem.isAllAccount ? @string/card_bills_label : @string/card_spent_label}"
            tools:text="@string/card_bills_label"
            android:layout_marginStart="@dimen/app_spacing_tiny"
            app:layout_constraintStart_toEndOf="@+id/totalExpense"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:id="@+id/incomeDot"
            android:background="@drawable/bg_income_circle"
            android:layout_marginEnd="@dimen/app_spacing_small"
            android:layout_width="@dimen/card_dot_size"
            android:layout_height="@dimen/card_dot_size"
            app:layout_constraintTop_toTopOf="@+id/incomeValue"
            app:layout_constraintEnd_toStartOf="@+id/incomeValue"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/incomeValue"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@{cardItem.income}"
            android:layout_marginEnd="@dimen/app_spacing_tiny"
            android:textColor="@{cardItem.isAllAccount ? @color/white : @color/black}"
            android:textAppearance="@style/TextAppearance.Bold"
            tools:text="$1445"
            app:layout_constraintEnd_toStartOf="@+id/incomeLabel"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/incomeLabel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@{cardItem.isAllAccount ? @color/card_all_account_color : @color/black}"
            android:text="@{cardItem.isAllAccount ? @string/card_cash_label : @string/card_income_label}"
            tools:text="@string/card_cash_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>